tweak heading and reorder

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div class="navigation">
         <div class="logo">
             <div class="icon"></div>
-            <h2>plantscribbles</h2>
+            <h1>plantscribbles</h1>
         </div>
         <button type="button" onclick="alert('Hello world!')">Collect on Opensea</button>
     </div>
 
     <div class="heading">
-        <h4 class="center-text">Experiments in color, form, and motion, Plant Scribbles mix the organic world with the blockchain. Each scribble is a 1 of 1 seamlessly looped video. A 4k non-animated version is also available for each scribble.</h4>
+        <h3 class="center-text">Experiments in color, form, motion, and <i>vibes</i>. Each scribble explores how organic matter mixes with the digital world, both in composition and in its permanance on the blockchain. 10% of all sales are donated to <a href="https://wilddiversity.com">Wild Diversity</a>, an organization dedicated to welcoming and creating a sense of belonging in the outdoors for the BIPOC & LGBTQ+ communities.</h3>
     </div>
 
     <div class="grid">
         <div class="card">
             <video class="preview" loop width="100%" autoplay muted>
-                <source src="001.mp4" type="video/mp4">
+                <source src="002.mp4" type="video/mp4">
             </video>
             <div class="metadata">
                 <div class="description">
                     <h2 class="card-title">#001</h2>
-                    <p>Palm</p>
+                    <p>Arecaceae [Palm]</p>
                 </div>
                 <div class="link-out">
                     <img src="open_in_new_white.svg" alt="open in new tab">
@@ -36,12 +36,12 @@
         </div>
         <div class="card">
             <video class="preview" loop width="100%" autoplay muted>
-                <source src="002.mp4" type="video/mp4">
+                <source src="001.mp4" type="video/mp4">
             </video>
             <div class="metadata">
                 <div class="description">
-                    <h2 class="card-title">#001</h2>
-                    <p>Palm</p>
+                    <h2 class="card-title">#002</h2>
+                    <p>Dracaena</p>
                 </div>
                 <div class="link-out">
                     <img src="open_in_new_white.svg" alt="open in new tab">
