--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="navigation">
         <div class="logo">
-            <div class="icon"></div>
+            <div class="icon">
+                <img class="png" src="icon.png">
+            </div>
             <h1>plantscribbles</h1>
         </div>
         <button type="button" onclick="alert('Hello world!')">Collect on Opensea</button>
