better colors for the ~vibes~

--- a/index.html
+++ b/index.html
@@ -50,5 +50,25 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <video class="preview" loop width="100%" autoplay muted>
+                <source src="002.mp4" type="video/mp4">
+            </video>
+            <div class="metadata">
+                <div class="description">
+                    <h2 class="card-title">#001</h2>
+                    <p>Arecaceae [Palm]</p>
+                </div>
+                <div class="link-out">
+                    <img src="open_in_new_white.svg" alt="open in new tab">
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="teaser">
+                <h2 class="card-title">Drop 001 of ???</h2>
+                <p>Only 50 Plant Scribbles will ever be minted, but the number included in each drop will differ. Dates of future drops are tbd.</p>
+            </div>
+        </div>
     </div>
 </body>
