make cards links

--- a/index.html
+++ b/index.html
@@ -22,48 +22,54 @@
     </div>
 
     <div class="grid">
-        <div class="card">
-            <video class="preview" loop width="100%" autoplay muted>
-                <source src="002.mp4" type="video/mp4">
-            </video>
-            <div class="metadata">
-                <div class="description">
-                    <h2 class="card-title">#001</h2>
-                    <p>Arecaceae [Palm]</p>
-                </div>
-                <div class="link-out">
-                    <img src="open_in_new_white.svg" alt="open in new tab">
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <video class="preview" loop width="100%" autoplay muted>
-                <source src="001.mp4" type="video/mp4">
-            </video>
-            <div class="metadata">
-                <div class="description">
-                    <h2 class="card-title">#002</h2>
-                    <p>Dracaena Fragrans [Corn Plant]</p>
-                </div>
-                <div class="link-out">
-                    <img src="open_in_new_white.svg" alt="open in new tab">
+        <a class="card-link" href="">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="002.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#001</h2>
+                        <p>Arecaceae [Palm]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <video class="preview" loop width="100%" autoplay muted>
-                <source src="002.mp4" type="video/mp4">
-            </video>
-            <div class="metadata">
-                <div class="description">
-                    <h2 class="card-title">#001</h2>
-                    <p>Arecaceae [Palm]</p>
-                </div>
-                <div class="link-out">
-                    <img src="open_in_new_white.svg" alt="open in new tab">
+        </a>
+        <a class="card-link" href="">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="001.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#002</h2>
+                        <p>Dracaena Fragrans [Corn Plant]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+        <a class="card-link" href="">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="002.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#003</h2>
+                        <p>Arecaceae [Palm]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
         <div class="card">
             <div class="teaser">
                 <h2 class="card-title">Drop 001 of ???</h2>
