--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <h1>plantscribbles</h1>
         </div>
-        <button type="button" onclick="alert('Hello world!')">Collect on Opensea</button>
+        <button type="button" onclick="location.href='https://opensea.io/account?tab=created';">Collect 'em on OpenSea</button>
     </div>
 
     <div class="heading">
@@ -47,6 +47,38 @@
                     <div class="description">
                         <h2 class="card-title">#002</h2>
                         <p>Dracaena Fragrans [Corn Plant]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="card-link" href="">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="002.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#003</h2>
+                        <p>Arecaceae [Palm]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="card-link" href="">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="002.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#003</h2>
+                        <p>Arecaceae [Palm]</p>
                     </div>
                     <div class="link-out">
                         <img src="open_in_new_white.svg" alt="open in new tab">
