--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="metadata">
                     <div class="description">
                         <h2 class="card-title">#002</h2>
-                        <p>Dracaena Fragrans [Corn Plant]</p>
+                        <p>Bambusoideae [Bamboo]</p>
                     </div>
                     <div class="link-out">
                         <img src="open_in_new_white.svg" alt="open in new tab">
