--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="base.css">
+    <title>plant scribbles</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
 </head>
 
 <body>
