play some music for the ~vibes~

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             </div>
             <h1>plantscribbles</h1>
         </div>
-        <button type="button" onclick="location.href='https://opensea.io/account?tab=created';">Collect 'em on OpenSea</button>
+        <div class="header-buttons">
+            <button type="button" class="primary-button" onclick="location.href='https://opensea.io/account?tab=created';">Collect 'em on OpenSea</button>
+            <audio src="Fela Kuti - Gentleman (1973) - 01 Gentleman.mp3" id="audio"></audio>
+            <button type="button" class="gradient-border play-sound-btn">&#128266;</button>
+        </div>
     </div>
 
     <div class="heading">
@@ -111,3 +115,5 @@
         </div>
     </div>
 </body>
+
+<script src="audio.js"></script>
