--- a/index.html
+++ b/index.html
@@ -30,11 +30,27 @@
         <a class="card-link" href="">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="002.mp4" type="video/mp4">
+                    <source src="001.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
                         <h2 class="card-title">#001</h2>
+                        <p>Hydrangea macrophylla</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="card-link" href="">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="002.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#002</h2>
                         <p>Arecaceae [Palm]</p>
                     </div>
                     <div class="link-out">
@@ -50,7 +66,7 @@
                 </video>
                 <div class="metadata">
                     <div class="description">
-                        <h2 class="card-title">#002</h2>
+                        <h2 class="card-title">#004</h2>
                         <p>Bambusoideae [Bamboo]</p>
                     </div>
                     <div class="link-out">
@@ -67,23 +83,7 @@
                 <div class="metadata">
                     <div class="description">
                         <h2 class="card-title">#003</h2>
-                        <p>Arecaceae [Palm]</p>
-                    </div>
-                    <div class="link-out">
-                        <img src="open_in_new_white.svg" alt="open in new tab">
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a class="card-link" href="">
-            <div class="card">
-                <video class="preview" loop width="100%" autoplay muted>
-                    <source src="001.mp4" type="video/mp4">
-                </video>
-                <div class="metadata">
-                    <div class="description">
-                        <h2 class="card-title">#003</h2>
-                        <p>Arecaceae [Palm]</p>
+                        <p>Carnegiea gigantea [Saguaro]</p>
                     </div>
                     <div class="link-out">
                         <img src="open_in_new_white.svg" alt="open in new tab">
@@ -99,7 +99,7 @@
                 <div class="metadata">
                     <div class="description">
                         <h2 class="card-title">#003</h2>
-                        <p>Arecaceae [Palm]</p>
+                        <p>Pachyveria [Succulent]</p>
                     </div>
                     <div class="link-out">
                         <img src="open_in_new_white.svg" alt="open in new tab">
@@ -110,7 +110,7 @@
         <div class="card">
             <div class="teaser">
                 <h2 class="card-title">Drop 001 of ???</h2>
-                <p>Only 50 Plant Scribbles will ever be minted, but the number included in each drop will differ. Dates of future drops are tbd.</p>
+                <p>Only 50 Plant Scribbles will ever be minted, but the number included in each drop will differ and depends on heavily on my mood. Dates of future drops are tbd.</p>
             </div>
         </div>
     </div>
