smaller videos and responsive improvements

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
             <h1>plantscribbles</h1>
         </div>
         <div class="header-buttons">
-            <button type="button" class="primary-button" onclick="location.href='https://opensea.io/account?tab=created';">Collect 'em on OpenSea</button>
+            <button type="button" class="primary-button" onclick="location.href='https://opensea.io/collection/plantscribbles';">Collect 'em on OpenSea</button>
             <audio src="Fela Kuti - Gentleman (1973) - 01 Gentleman.mp3" id="audio"></audio>
             <button type="button" class="gradient-border play-sound-btn">&#128266;</button>
         </div>
     </div>
 
     <div class="heading">
-        <h3 class="center-text">Experiments in color, form, motion, and <i>vibes</i>. Each scribble explores how organic matter mixes with the digital world, both in composition and in its permanance on the blockchain. 10% of all sales are donated to <a href="https://wilddiversity.com">Wild Diversity</a>, an organization dedicated to welcoming and creating a sense of belonging in the outdoors for the BIPOC & LGBTQ+ communities.</h3>
+        <h3 class="center-text">Experiments in color, form, motion, and <i>vibes</i>. Each scribble explores how organic matter mixes with the digital world, both in composition and in its permanence on the blockchain. 10% of all sales are donated to <a href="https://wilddiversity.com">Wild Diversity</a>, an organization dedicated to welcoming and creating a sense of belonging in the outdoors for the BIPOC & LGBTQ+ communities. Check out OpenSea for the full resolution animations.</h3>
     </div>
 
     <div class="grid">
-        <a class="card-link" href="">
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270781308083109889">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="001.mp4" type="video/mp4">
+                    <source src="001-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
@@ -45,10 +45,10 @@
                 </div>
             </div>
         </a>
-        <a class="card-link" href="">
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270782407594737665">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="002.mp4" type="video/mp4">
+                    <source src="002-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
@@ -61,14 +61,14 @@
                 </div>
             </div>
         </a>
-        <a class="card-link" href="">
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270783507106365441">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="003.mp4" type="video/mp4">
+                    <source src="003-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
-                        <h2 class="card-title">#004</h2>
+                        <h2 class="card-title">#003</h2>
                         <p>Bambusoideae [Bamboo]</p>
                     </div>
                     <div class="link-out">
@@ -77,14 +77,14 @@
                 </div>
             </div>
         </a>
-        <a class="card-link" href="">
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270784606617993217">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="004.mp4" type="video/mp4">
+                    <source src="004-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
-                        <h2 class="card-title">#003</h2>
+                        <h2 class="card-title">#004</h2>
                         <p>Carnegiea gigantea [Saguaro]</p>
                     </div>
                     <div class="link-out">
@@ -93,14 +93,14 @@
                 </div>
             </div>
         </a>
-        <a class="card-link" href="">
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270785706129620993">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="005.mp4" type="video/mp4">
+                    <source src="005-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
-                        <h2 class="card-title">#003</h2>
+                        <h2 class="card-title">#005</h2>
                         <p>Pachyveria [Succulent]</p>
                     </div>
                     <div class="link-out">
