--- a/index.html
+++ b/index.html
@@ -109,12 +109,86 @@
                 </div>
             </div>
         </a>
-        <div class="card">
-            <div class="teaser">
-                <h2 class="card-title">Drop 001 of ???</h2>
-                <p>Only 50 Plant Scribbles will ever be minted, but the number included in each drop will differ and depends on heavily on my mood. Dates of future drops are tbd.</p>
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270786805641248769">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="006-webres.mov" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#006</h2>
+                        <p>Dracaena trifasciata [Snake plant]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
             </div>
-        </div>
+        </a>
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270787905152876545">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="007.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#007</h2>
+                        <p>Olea europaea [Olive tree]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270789004664504321">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="008.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#008</h2>
+                        <p>Philodendron giganteum</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270790104176132097">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="009.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#009</h2>
+                        <p>Echinopsis pachanoi [San Pedro cactus]</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270791203687759873">
+            <div class="card">
+                <video class="preview" loop width="100%" autoplay muted>
+                    <source src="010.mp4" type="video/mp4">
+                </video>
+                <div class="metadata">
+                    <div class="description">
+                        <h2 class="card-title">#010</h2>
+                        <p>Aloe vera</p>
+                    </div>
+                    <div class="link-out">
+                        <img src="open_in_new_white.svg" alt="open in new tab">
+                    </div>
+                </div>
+            </div>
+        </a>
     </div>
 </body>
 
