--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270786805641248769">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="006-webres.mov" type="video/mp4">
+                    <source src="006-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
@@ -128,7 +128,7 @@
         <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270787905152876545">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="007.mp4" type="video/mp4">
+                    <source src="007-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
@@ -144,7 +144,7 @@
         <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270789004664504321">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="008.mp4" type="video/mp4">
+                    <source src="008-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
@@ -160,7 +160,7 @@
         <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270790104176132097">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="009.mp4" type="video/mp4">
+                    <source src="009-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
@@ -176,7 +176,7 @@
         <a class="card-link" href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/21770810765884135041829280970329581085178235846879921554209270791203687759873">
             <div class="card">
                 <video class="preview" loop width="100%" autoplay muted>
-                    <source src="010.mp4" type="video/mp4">
+                    <source src="010-webres.mp4" type="video/mp4">
                 </video>
                 <div class="metadata">
                     <div class="description">
